// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OfficesTab should match a snapshot where there are no offices 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-flex-container el-flex-justify-between"
      >
        <h1
          class="el-text-base el-title"
        >
          SOME_NAME
           Offices
        </h1>
      </div>
      <form>
        <div
          class="el-form-layout-has-margin el-fade-in el-form-layout"
        >
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type undefined"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="name"
                placeholder="Search for an office"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                Search
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="el-flex-container el-flex-grow el-flex-align-end el-hfull"
            >
              <div
                class="mocked-styled-2 el-button-group"
              >
                <div
                  class="el-button-group-align-left el-button-group-inner"
                >
                  <button
                    class="el-intent-primary el-button"
                    type="submit"
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    Search
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
      <div
        class="mocked-styled-44 el-loader-container"
      >
        <div
          class="mocked-styled-46 el-loader"
        >
          <div
            class="mocked-styled-47 el-loader-moving-bar"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-flex-container el-flex-justify-between"
    >
      <h1
        class="el-text-base el-title"
      >
        SOME_NAME
         Offices
      </h1>
    </div>
    <form>
      <div
        class="el-form-layout-has-margin el-fade-in el-form-layout"
      >
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type undefined"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="name"
              placeholder="Search for an office"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Search
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="el-flex-container el-flex-grow el-flex-align-end el-hfull"
          >
            <div
              class="mocked-styled-2 el-button-group"
            >
              <div
                class="el-button-group-align-left el-button-group-inner"
              >
                <button
                  class="el-intent-primary el-button"
                  type="submit"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Search
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
    <div
      class="mocked-styled-44 el-loader-container"
    >
      <div
        class="mocked-styled-46 el-loader"
      >
        <div
          class="mocked-styled-47 el-loader-moving-bar"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`OfficesTab should match a snapshot where there are offices 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-flex-container el-flex-justify-between"
      >
        <h1
          class="el-text-base el-title"
        >
          SOME_NAME
           Offices
        </h1>
      </div>
      <form>
        <div
          class="el-form-layout-has-margin el-fade-in el-form-layout"
        >
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type undefined"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="name"
                placeholder="Search for an office"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                Search
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="el-flex-container el-flex-grow el-flex-align-end el-hfull"
            >
              <div
                class="mocked-styled-2 el-button-group"
              >
                <div
                  class="el-button-group-align-left el-button-group-inner"
                >
                  <button
                    class="el-intent-primary el-button"
                    type="submit"
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    Search
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
      <div
        class="mocked-styled-44 el-loader-container"
      >
        <div
          class="mocked-styled-46 el-loader"
        >
          <div
            class="mocked-styled-47 el-loader-moving-bar"
          />
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-flex-container el-flex-justify-between"
    >
      <h1
        class="el-text-base el-title"
      >
        SOME_NAME
         Offices
      </h1>
    </div>
    <form>
      <div
        class="el-form-layout-has-margin el-fade-in el-form-layout"
      >
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type undefined"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="name"
              placeholder="Search for an office"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Search
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="el-flex-container el-flex-grow el-flex-align-end el-hfull"
          >
            <div
              class="mocked-styled-2 el-button-group"
            >
              <div
                class="el-button-group-align-left el-button-group-inner"
              >
                <button
                  class="el-intent-primary el-button"
                  type="submit"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Search
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
    <div
      class="mocked-styled-44 el-loader-container"
    >
      <div
        class="mocked-styled-46 el-loader"
      >
        <div
          class="mocked-styled-47 el-loader-moving-bar"
        />
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`OfficesTab should match a snapshot where there is no orgId 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <div
        class="el-flex-container el-flex-justify-between"
      >
        <h1
          class="el-text-base el-title"
        >
          Offices
        </h1>
      </div>
      <form>
        <div
          class="el-form-layout-has-margin el-fade-in el-form-layout"
        >
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type undefined"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="name"
                placeholder="Search for an office"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                Search
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="el-flex-container el-flex-grow el-flex-align-end el-hfull"
            >
              <div
                class="mocked-styled-2 el-button-group"
              >
                <div
                  class="el-button-group-align-left el-button-group-inner"
                >
                  <button
                    class="el-intent-primary el-button"
                    type="submit"
                  >
                    <div
                      class="mocked-styled-0 el-button-loader"
                    />
                    Search
                  </button>
                </div>
              </div>
            </div>
          </div>
        </div>
      </form>
      <div
        class="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        role="status"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon-new el-icon"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              style="font-size: 1.25rem;"
              title="Icon image with name info"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
        <div
          aria-live="polite"
          class="el-pn-content"
        >
          No organisation selected. You need to select an organisation to view offices.
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <div
      class="el-flex-container el-flex-justify-between"
    >
      <h1
        class="el-text-base el-title"
      >
        Offices
      </h1>
    </div>
    <form>
      <div
        class="el-form-layout-has-margin el-fade-in el-form-layout"
      >
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <input
              aria-label="Input type undefined"
              class="mocked-styled-38 el-input"
              id="test-static-id"
              name="name"
              placeholder="Search for an office"
            />
            <label
              class="mocked-styled-41 el-label"
              for="test-static-id"
            >
              Search
            </label>
          </div>
        </div>
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="el-flex-container el-flex-grow el-flex-align-end el-hfull"
          >
            <div
              class="mocked-styled-2 el-button-group"
            >
              <div
                class="el-button-group-align-left el-button-group-inner"
              >
                <button
                  class="el-intent-primary el-button"
                  type="submit"
                >
                  <div
                    class="mocked-styled-0 el-button-loader"
                  />
                  Search
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
    <div
      class="el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
      role="status"
    >
      <div
        class="el-pn-icon"
        data-testid="close-icon"
      >
        <span
          class="el-icon-new el-icon"
          style="font-size: 1.25rem;"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            style="font-size: 1.25rem;"
            title="Icon image with name info"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
              fill="currentColor"
            />
          </svg>
        </span>
      </div>
      <div
        aria-live="polite"
        class="el-pn-content"
      >
        No organisation selected. You need to select an organisation to view offices.
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
